# 3d-stimulus-game-rust-for-macaques

./: .gitignore  Cargo.toml  QUICK_REFERENCE.md  README.md  controller_main.js  idea.md  index.html  structure_game.txt  trials.jsonl
controller_native/: Cargo.toml
controller_native/src/: main.rs
controller_python/: controller.py
game_node/: Cargo.toml
game_node/pkg/: game_node.d.ts  game_node.js  game_node_bg.wasm.d.ts  package.json
game_node/src/: command_handler.rs  lib.rs  main.rs  state_emitter.rs  web_adapter.rs
game_node/src/utils/: camera.rs  constants.rs  debug_functions.rs  game_functions.rs  objects.rs  pyramid.rs  setup.rs  systems_logic.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs  native.rs  python.rs  web.rs
src/: lib.rs  main.rs
src/utils/: camera.rs  constants.rs  debug_functions.rs  functions.rs  game_functions.rs  global_inputs.rs  inputs.rs  macros.rs  objects.rs  pyramid.rs  setup.rs  systems_logic.rs  touch_inputs.rs
